--- a/kustom-webapp/base/deployment.yaml
+++ b/kustom-webapp/base/deployment.yaml
@@ -8,7 +8,7 @@ spec:
     spec: # Pod spec
       containers:
       - name: mycontainer
-        image: "jgemanimtim/mywebapp:latest"
+        image: "devopsjourney1/mywebapp:latest"
         ports:
         - containerPort: 80
         envFrom:
